# dayana_my_marketplace_blog

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 94ac7bbc8f03_initial_migration.py  e1e413fc9045_add_is_deleted_column_to_articles.py  initial_initial_migration.py
app/: __init__.py  config.py  main.py  s3.py
app/api/v1/: articles.py  auth.py  categories.py  dependencies.py  images.py
app/db/: base.py  session.py
app/models/: __init__.py  article.py  association.py  category.py  user.py
app/schemas/: article.py  category.py
app/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_articles_and_categories.py  test_auth.py
